<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShutdownApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connection_header_direct">Connection to %1$s is:</string>
    <string name="connection_header_proxy">Connection with username %1$s is:</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="add_direct">Direct connection</string>
    <string name="add_proxy">Proxy connection</string>

    <string name="edit_text_host_key">edit_text_host</string>
    <string name="title_host">Host address</string>
    <string name="default_host">54.194.222.199</string>
    <string name="dialog_host">Set host address</string>
    <!--<string name="summary_host">Address to connect with proxy connection</string>-->

    <string name="edit_text_utorrent_username">edit_text_utorrent_username</string>
    <string name="title_utorrent_username">Username</string>
    <string name="summary_utorrent_username">Set username you want to use while connecting to uTorrent download list</string>
    <string name="dialog_utorrent_username">Set username</string>

    <string name="edit_text_utorrent_password">edit_text_utorrent_password</string>
    <string name="title_utorrent_password">Password</string>
    <string name="summary_utorrent_password">Set password you want to use while connecting to uTorrent download list</string>
    <string name="dialog_utorrent_password">Set password</string>

    <string name="drawer_open">Opening ...</string>
    <string name="drawer_close">Closing ...</string>

</resources>
