<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Proxy connection details">

        <EditTextPreference
            android:key="@string/edit_text_host_key"
            android:title="@string/title_host"
            android:defaultValue="@string/default_host"
            android:dialogTitle="@string/dialog_host" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="uTorrent shows connection">

        <EditTextPreference
            android:key="@string/edit_text_utorrent_username"
            android:title="@string/title_utorrent_username"
            android:summary="@string/summary_utorrent_username"
            android:dialogTitle="@string/dialog_utorrent_username" />

        <EditTextPreference
            android:key="@string/edit_text_utorrent_password"
            android:title="@string/title_utorrent_password"
            android:summary="@string/summary_utorrent_password"
            android:dialogTitle="@string/dialog_utorrent_password"
            android:inputType="textPassword" />

    </PreferenceCategory>

</PreferenceScreen>